--- a/src/index.css
+++ b/src/index.css
@@ -10,6 +10,14 @@ a {
   text-decoration: none;
 }
 
+input {
+  outline: none;
+}
+button,
+input {
+  font-family: 'Poppins', sans-serif;
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
